@@ -22,53 +22,53 @@ import com.echothree.model.control.geo.server.control.GeoControl;
 import com.echothree.model.control.party.common.PartyTypes;
 import com.echothree.model.control.security.common.SecurityRoleGroups;
 import com.echothree.model.control.security.common.SecurityRoles;
-import com.echothree.model.data.user.common.pk.UserVisitPK;
+import com.echothree.model.data.geo.server.entity.GeoCodeAlias;
+import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.common.message.ExecutionErrors;
 import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
-import com.echothree.util.common.command.BaseResult;
-import com.echothree.util.server.control.BaseSimpleCommand;
+import com.echothree.util.server.control.BaseSingleEntityCommand;
 import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
-import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import javax.enterprise.context.Dependent;
+import javax.inject.Inject;
 
 @Dependent
 public class GetGeoCodeAliasCommand
-        extends BaseSimpleCommand<GetGeoCodeAliasForm> {
+        extends BaseSingleEntityCommand<GeoCodeAlias, GetGeoCodeAliasForm> {
     
     private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
                         new SecurityRoleDefinition(SecurityRoleGroups.GeoCodeAlias.name(), SecurityRoles.Review.name())
-                        )))
-                )));
+                        ))
+                ));
         
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        FORM_FIELD_DEFINITIONS = List.of(
                 new FieldDefinition("GeoCodeName", FieldType.ENTITY_NAME, true, null, null),
                 new FieldDefinition("GeoCodeAliasTypeName", FieldType.ENTITY_NAME, true, null, null)
-                ));
+                );
     }
     
     /** Creates a new instance of GetGeoCodeAliasCommand */
     public GetGeoCodeAliasCommand() {
-        super(COMMAND_SECURITY_DEFINITION, FORM_FIELD_DEFINITIONS, true);
+        super(COMMAND_SECURITY_DEFINITION, FORM_FIELD_DEFINITIONS, false);
     }
     
+    @Inject
+    GeoControl geoControl;
+
     @Override
-    protected BaseResult execute() {
-        var geoControl = Session.getModelController(GeoControl.class);
-        var result = GeoResultFactory.getGetGeoCodeAliasResult();
+    protected GeoCodeAlias getEntity() {
         var geoCodeName = form.getGeoCodeName();
         var geoCode = geoControl.getGeoCodeByName(geoCodeName);
+        GeoCodeAlias geoCodeAlias = null;
 
         if(geoCode != null) {
             var geoCodeType = geoCode.getLastDetail().getGeoCodeType();
@@ -76,11 +76,9 @@ public class GetGeoCodeAliasCommand
             var geoCodeAliasType = geoControl.getGeoCodeAliasTypeByName(geoCodeType, geoCodeAliasTypeName);
 
             if(geoCodeAliasType != null) {
-                var geoCodeAlias = geoControl.getGeoCodeAlias(geoCode, geoCodeAliasType);
+                geoCodeAlias = geoControl.getGeoCodeAlias(geoCode, geoCodeAliasType);
 
-                if(geoCodeAlias != null) {
-                    result.setGeoCodeAlias(geoControl.getGeoCodeAliasTransfer(getUserVisit(), geoCodeAlias));
-                } else {
+                if(geoCodeAlias == null) {
                     addExecutionError(ExecutionErrors.UnknownGeoCodeAlias.name(), geoCodeName, geoCodeAliasTypeName);
                 }
             } else {
@@ -89,7 +87,18 @@ public class GetGeoCodeAliasCommand
         } else {
             addExecutionError(ExecutionErrors.UnknownGeoCodeName.name(), geoCodeName);
         }
-        
+
+        return geoCodeAlias;
+    }
+
+    @Override
+    protected BaseResult getResult(GeoCodeAlias geoCodeAlias) {
+        var result = GeoResultFactory.getGetGeoCodeAliasResult();
+
+        if(geoCodeAlias != null) {
+            result.setGeoCodeAlias(geoControl.getGeoCodeAliasTransfer(getUserVisit(), geoCodeAlias));
+        }
+
         return result;
     }
     
